# maubot-alerts

./: .gitlab-ci.yml  LICENSE  README.md  maubot.yaml  pyproject.toml  requirements.txt
alertbot/: __init__.py  main.py
test/: 10_firing.json  20_partial_resolve.json  30_full_resolve.json  test_alert.py
